--- a/plauth/locale/en/LC_MESSAGES/django.po
+++ b/plauth/locale/en/LC_MESSAGES/django.po
@@ -1,40 +1,37 @@
-# French translation of Plauth.
+# Pleft authentication module.
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
-# Sander Dijkhuis <sander.dijkhuis@gmail.com>
-# Kleis Krebbers <kleiskrebbers@gmail.com>
+# Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-12-22 17:05-0600\n"
-"PO-Revision-Date: 2010-09-27 13:31+0100\n"
-"Last-Translator: Sander Dijkhuis <sander@pleft.com>\n"
-"Language-Team: French <info@pleft.com>\n"
-"Language: fr\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: French\n"
 
 #: templates/plauth/not-signed-in.html:5
 #: templates/plauth/not-signed-in.html:10
 msgid "Not signed in"
-msgstr "Pas connecté"
+msgstr ""
 
 #: templates/plauth/not-signed-in.html:14
 msgid ""
 "You are not signed in. Please use the URL that was sent to you by email."
 msgstr ""
-"Vous n’êtes pas connecté. Veuillez utiliser l’URL qui vous a été envoyé par "
-"email."
 
 #: templates/plauth/wrong-email-pass.html:5
 #: templates/plauth/wrong-email-pass.html:10
 msgid "Failed to sign in"
-msgstr "Erreur de login"
+msgstr ""
 
 #: templates/plauth/wrong-email-pass.html:14
 msgid "It seems that the URL you used is wrong or stopped working."
-msgstr "Il semblerais que l’adresse utilisé est fausse ou ne fonctionne plus."
+msgstr ""
