--- a/plapp/locale/de/LC_MESSAGES/djangojs.po
+++ b/plapp/locale/de/LC_MESSAGES/djangojs.po
@@ -1,22 +1,21 @@
-# German translation of Plapp's JavaScript files.
+# Pleft app client.
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
 # Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
-# Kleis Krebbers <kleiskrebbers@gmail.com>, 2010.
-#
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Pleft\n"
+"Report-Msgid-Bugs-To: http://code.google.com/p/pleft/issues/list\n"
 "POT-Creation-Date: 2010-12-22 17:05-0600\n"
-"PO-Revision-Date: 2010-12-19 18:29+0100\n"
-"Last-Translator: Kleis Krebbers <kleiskrebbers@gmail.com>\n"
-"Language-Team: German <info@pleft.com>\n"
-"Language: de\n"
+"PO-Revision-Date: 2010-12-23 00:25+0000\n"
+"Last-Translator: sander <sander.dijkhuis@gmail.com>\n"
+"Language-Team: German <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: German\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: js/accountbar.js:59
 msgid "Loading…"
@@ -115,28 +114,16 @@ msgid "Example appointment overview"
 msgstr "Beispiel für die Terminübersicht"
 
 #: js/overview.js:142
-msgid ""
-"This appointment could not be found or is not meant to be seen by you. We "
-"apologize for the inconvenience."
-msgstr ""
-"Dieser Termin konnte nicht gefunden werden oder Sie verfügen nicht über "
-"ausreichende Berechtigungen. Wir entschuldigen uns für die Unannehmlichkeit."
+msgid "This appointment could not be found or is not meant to be seen by you. We apologize for the inconvenience."
+msgstr "Dieser Termin konnte nicht gefunden werden oder Sie verfügen nicht über ausreichende Berechtigungen. Wir entschuldigen uns für die Unannehmlichkeit."
 
 #: js/overview.js:166
-msgid ""
-"Use the Yes/Maybe/No buttons to indicate when you’re available. You can also "
-"enter comments."
-msgstr ""
-"Benutzen Sie die Ja/??/Nein Schaltflächen um anzugeben wann Sie verfügbar "
-"sind.  Sie können auch Kommentare eintragen."
+msgid "Use the Yes/Maybe/No buttons to indicate when you’re available. You can also enter comments."
+msgstr "Benutzen Sie die Ja/??/Nein Schaltflächen um anzugeben wann Sie verfügbar sind.  Sie können auch Kommentare eintragen."
 
 #: js/overview.js:168
-msgid ""
-"View the other participants’ availability by clicking on their names or on "
-"the dates at the left side."
-msgstr ""
-"Lassen Sie der Verfügbarkeit der anderen Reilnehmer anzeigen, indem Sie auf "
-"deren Namen auf der linken Seite klicken."
+msgid "View the other participants’ availability by clicking on their names or on the dates at the left side."
+msgstr "Lassen Sie der Verfügbarkeit der anderen Reilnehmer anzeigen, indem Sie auf deren Namen auf der linken Seite klicken."
 
 #: js/overview.js:170
 msgid "Appointment"
@@ -167,9 +154,8 @@ msgid "Sorry, your availability could not be saved."
 msgstr ""
 
 #: js/overview.js:346
-#, fuzzy
 msgid "Please try again."
-msgstr "Bitte geben Sie die Adresse an."
+msgstr ""
 
 #: js/overview.js:374
 msgid "Email addresses of the invitees (only visible to you)"
@@ -246,12 +232,3 @@ msgstr "??"
 #: js/overview.js:615
 msgid "No"
 msgstr "Nein"
-
-#~ msgid "today"
-#~ msgstr "Heute"
-
-#~ msgid "No times are selected yet."
-#~ msgstr "Keine Zeiten ausgewählt."
-
-#~ msgid "Add a time:"
-#~ msgstr "Zeit hinzufügen:"
