--- a/plapp/locale/nl/LC_MESSAGES/djangojs.po
+++ b/plapp/locale/nl/LC_MESSAGES/djangojs.po
@@ -1,22 +1,21 @@
-# Dutch translation of Plapp's JavaScript files.
+# Pleft app client.
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
 # Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
-# Kleis Krebbers <kleiskrebbers@gmail.com>, 2010.
-#
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Pleft\n"
+"Report-Msgid-Bugs-To: http://code.google.com/p/pleft/issues/list\n"
 "POT-Creation-Date: 2010-12-22 17:05-0600\n"
-"PO-Revision-Date: 2010-12-19 18:15+0100\n"
-"Last-Translator: Kleis Krebbers <kleiskrebbers@gmail.com>\n"
-"Language-Team: Dutch <info@pleft.com>\n"
-"Language: nl\n"
+"PO-Revision-Date: 2010-12-23 00:25+0000\n"
+"Last-Translator: sander <sander.dijkhuis@gmail.com>\n"
+"Language-Team: Dutch <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Dutch\n"
+"Language: nl\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: js/accountbar.js:59
 msgid "Loading…"
@@ -115,28 +114,16 @@ msgid "Example appointment overview"
 msgstr "Voorbeeldafsprakenoverzicht"
 
 #: js/overview.js:142
-msgid ""
-"This appointment could not be found or is not meant to be seen by you. We "
-"apologize for the inconvenience."
-msgstr ""
-"Deze afspraak kon niet worden gevonden of is niet voor u bedoeld. Excuses "
-"voor het ongemak."
+msgid "This appointment could not be found or is not meant to be seen by you. We apologize for the inconvenience."
+msgstr "Deze afspraak kon niet worden gevonden of is niet voor u bedoeld. Excuses voor het ongemak."
 
 #: js/overview.js:166
-msgid ""
-"Use the Yes/Maybe/No buttons to indicate when you’re available. You can also "
-"enter comments."
-msgstr ""
-"Gebruik de knoppen Ja/Mss/Nee om aan te geven wanneer u beschikbaar bent. "
-"(‘Mss’ staat voor ‘misschien’.) U kunt ook commentaar toevoegen."
+msgid "Use the Yes/Maybe/No buttons to indicate when you’re available. You can also enter comments."
+msgstr "Gebruik de knoppen Ja/Mss/Nee om aan te geven wanneer u beschikbaar bent. (‘Mss’ staat voor ‘misschien’.) U kunt ook commentaar toevoegen."
 
 #: js/overview.js:168
-msgid ""
-"View the other participants’ availability by clicking on their names or on "
-"the dates at the left side."
-msgstr ""
-"Bekijk de beschikbaarheid van een andere deelnemer door op zijn of haar naam "
-"te klikken of op de data aan de linkerkant."
+msgid "View the other participants’ availability by clicking on their names or on the dates at the left side."
+msgstr "Bekijk de beschikbaarheid van een andere deelnemer door op zijn of haar naam te klikken of op de data aan de linkerkant."
 
 #: js/overview.js:170
 msgid "Appointment"
@@ -208,7 +195,7 @@ msgstr "Selecteer een genodigde"
 
 #: js/overview.js:446 js/overview.js.py:457
 msgid "Send invitation again"
-msgstr "Verstuur de uitnodiging nogmaals"
+msgstr "Uitnodiging nogmaals versturen"
 
 #: js/overview.js:465
 msgid "Propose another date"
@@ -232,7 +219,7 @@ msgstr "Dit lijkt een ongeldige datum te zijn."
 
 #: js/overview.js:512
 msgid "This does not seem to be a valid time."
-msgstr "Dit lijkt een ongeldige tijd te zijn."
+msgstr "Dit lijkt een ongeldig tijdstip te zijn."
 
 #: js/overview.js:613
 msgid "Yes"
@@ -245,12 +232,3 @@ msgstr "Mss"
 #: js/overview.js:615
 msgid "No"
 msgstr "Nee"
-
-#~ msgid "today"
-#~ msgstr "nu"
-
-#~ msgid "No times are selected yet."
-#~ msgstr "Er zijn nog geen tijdstippen gekozen."
-
-#~ msgid "Add a time:"
-#~ msgstr "Tijdstip toevoegen:"
