--- a/plapp/locale/ru/LC_MESSAGES/djangojs.po
+++ b/plapp/locale/ru/LC_MESSAGES/djangojs.po
@@ -1,27 +1,25 @@
-# Russian translation of Plapp's JavaScript files.
+# Pleft app client.
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
 # Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
-# Kleis Krebbers <kleiskrebbers@gmail.com>, 2010.
-#
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Pleft\n"
+"Report-Msgid-Bugs-To: http://code.google.com/p/pleft/issues/list\n"
 "POT-Creation-Date: 2010-12-22 17:05-0600\n"
-"PO-Revision-Date: 2010-12-19 18:41+0100\n"
-"Last-Translator: Kleis Krebbers <kleiskrebbers@gmail.com>\n"
-"Language-Team: Russian <info@pleft.com>\n"
-"Language: ru\n"
+"PO-Revision-Date: 2010-12-23 00:25+0000\n"
+"Last-Translator: sander <sander.dijkhuis@gmail.com>\n"
+"Language-Team: Russian <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Russian\n"
+"Language: ru\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: js/accountbar.js:59
-#, fuzzy
 msgid "Loading…"
-msgstr "Отсылаю…"
+msgstr ""
 
 #: js/accountbar.js:78
 msgid "Menu temporarily unavailaible."
@@ -116,28 +114,16 @@ msgid "Example appointment overview"
 msgstr "Пример обзора встречь"
 
 #: js/overview.js:142
-msgid ""
-"This appointment could not be found or is not meant to be seen by you. We "
-"apologize for the inconvenience."
-msgstr ""
-"Эта встреча не была найдена или вы не имеете права на просмотр. Мы приносим "
-"вам наши извинения."
+msgid "This appointment could not be found or is not meant to be seen by you. We apologize for the inconvenience."
+msgstr "Эта встреча не была найдена или вы не имеете права на просмотр. Мы приносим вам наши извинения."
 
 #: js/overview.js:166
-msgid ""
-"Use the Yes/Maybe/No buttons to indicate when you’re available. You can also "
-"enter comments."
-msgstr ""
-"Используйте Да/??/Нет кнопки чтобы указать вашу доступность. Вы также можете "
-"ввести свой комментарий."
+msgid "Use the Yes/Maybe/No buttons to indicate when you’re available. You can also enter comments."
+msgstr "Используйте Да/??/Нет кнопки чтобы указать вашу доступность. Вы также можете ввести свой комментарий."
 
 #: js/overview.js:168
-msgid ""
-"View the other participants’ availability by clicking on their names or on "
-"the dates at the left side."
-msgstr ""
-"Смотрите доступность других приглашённых нажимая на их имена или на даты "
-"слева."
+msgid "View the other participants’ availability by clicking on their names or on the dates at the left side."
+msgstr "Смотрите доступность других приглашённых нажимая на их имена или на даты слева."
 
 #: js/overview.js:170
 msgid "Appointment"
@@ -168,9 +154,8 @@ msgid "Sorry, your availability could not be saved."
 msgstr ""
 
 #: js/overview.js:346
-#, fuzzy
 msgid "Please try again."
-msgstr "Пожалуйста введите адрес."
+msgstr ""
 
 #: js/overview.js:374
 msgid "Email addresses of the invitees (only visible to you)"
@@ -201,18 +186,16 @@ msgid "Sending…"
 msgstr "Отсылаю…"
 
 #: js/overview.js:428
-#, fuzzy
 msgid "Resend invitations"
-msgstr "Отошлите приглашения"
+msgstr ""
 
 #: js/overview.js:432
 msgid "Select an invitee"
 msgstr ""
 
 #: js/overview.js:446 js/overview.js.py:457
-#, fuzzy
 msgid "Send invitation again"
-msgstr "Отправить приглашения"
+msgstr ""
 
 #: js/overview.js:465
 msgid "Propose another date"
@@ -249,12 +232,3 @@ msgstr "??"
 #: js/overview.js:615
 msgid "No"
 msgstr "Нет"
-
-#~ msgid "today"
-#~ msgstr "⬅"
-
-#~ msgid "No times are selected yet."
-#~ msgstr "Ещё нет выбранных дат."
-
-#~ msgid "Add a time:"
-#~ msgstr "Добавьте время:"
