--- a/plauth/locale/nl/LC_MESSAGES/django.po
+++ b/plauth/locale/nl/LC_MESSAGES/django.po
@@ -1,22 +1,21 @@
-# Dutch translation of Plauth.
+# Pleft authentication module.
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
-# Sander Dijkhuis <sander.dijkhuis@gmail.com>
-# Kleis Krebbers <kleiskrebbers@gmail.com>
-#
+# Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Pleft\n"
+"Report-Msgid-Bugs-To: http://code.google.com/p/pleft/issues/list\n"
 "POT-Creation-Date: 2010-12-22 17:05-0600\n"
-"PO-Revision-Date: 2010-09-27 13:31+0100\n"
-"Last-Translator: Sander Dijkhuis <sander@pleft.com>\n"
-"Language-Team: Dutch <info@pleft.com>\n"
-"Language: nl\n"
+"PO-Revision-Date: 2010-12-23 00:25+0000\n"
+"Last-Translator: sander <sander.dijkhuis@gmail.com>\n"
+"Language-Team: Dutch <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Dutch\n"
+"Language: nl\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: templates/plauth/not-signed-in.html:5
 #: templates/plauth/not-signed-in.html:10
@@ -24,11 +23,8 @@ msgid "Not signed in"
 msgstr "Niet ingelogd"
 
 #: templates/plauth/not-signed-in.html:14
-msgid ""
-"You are not signed in. Please use the URL that was sent to you by email."
-msgstr ""
-"U bent niet ingelogd. Gebruik alstublieft de URL die naar u toe is gestuurd "
-"om weer in te loggen."
+msgid "You are not signed in. Please use the URL that was sent to you by email."
+msgstr "U bent niet ingelogd. Gebruik alstublieft de URL die naar u toe is gestuurd om weer in te loggen."
 
 #: templates/plauth/wrong-email-pass.html:5
 #: templates/plauth/wrong-email-pass.html:10
@@ -37,6 +33,4 @@ msgstr "Inloggen mislukt"
 
 #: templates/plauth/wrong-email-pass.html:14
 msgid "It seems that the URL you used is wrong or stopped working."
-msgstr ""
-"Het lijkt erop dat de URL die u heeft gebruikt, verkeerd is of niet meer "
-"werkt."
+msgstr "Het lijkt erop dat de URL die u heeft gebruikt, verkeerd is of niet meer werkt."
