--- a/README
+++ b/README
@@ -12,13 +12,14 @@ Installation:
    http://code.google.com/p/plovr/downloads/list
 3. Symlink external/plovr-[code].jar to external/plovr.jar
 4. Create pleft/local_settings.py, based on one of the examples in that dir.
-5. pleft/manage.py init
-6. pleft/manage.py compile
-7. pleft/manage.py mo
+5. python pleft/manage.py dbsync
+6. python pleft/manage.py compile
+7. If you want to test translations, install gettext and run:
+   python pleft/manage.py mo
 
 Run debug servers:
-pleft/manage.py runplovr
-pleft/manage.py runserver
+python pleft/manage.py runplovr
+python pleft/manage.py runserver
 
 Note:
 - If you are using MySQL, make sure that the database is created using:
